[FIX-5] Fix CTF misalignment

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   }
 }
 
-@media only screen and (min-width: 551px) and (max-width: 1000px) {
+@media only screen and (min-width: 551px) and (max-width: 1100px) {
   :root {
     font-size: 12px;
   }
