--- a/src/components/Skydaysctf.css
+++ b/src/components/Skydaysctf.css
@@ -5,12 +5,12 @@
   align-items: center;
   gap: 3rem;
   scroll-margin-top: 100px;
+  width: 80%;
 }
 
 .ctf > div {
   background-color: rgba(20, 40, 80, 0.2);
-  width: 100%;
-
+  width: 100vw;
   text-align: center;
   padding: 3rem;
 }
@@ -30,7 +30,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: start;
-  width: 80%;
   gap: 3rem;
 }
 .ctf-about > p {
